[package]
name = "ngds"
version = "0.1.2"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"
description = "Rust bindings for AVFounation"
homepage = "https://github.com/adamnemecek/ngds"
repository = "https://github.com/adamnemecek/ngds"
readme = "README.md"
keywords = ["datastructure", "stack"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
