[package]
name = "ngds"
version = "0.1.3"
authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
edition = "2018"
description = "Some basic structures like stack"
homepage = "https://github.com/adamnemecek/ngds"
repository = "https://github.com/adamnemecek/ngds"
readme = "README.md"
keywords = ["datastructure", "stack"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
